--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_graph">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_graph"
+    app:startDestination="@id/clienteFragment">
+
+    <fragment
+        android:id="@+id/clienteFragment"
+        android:name="br.com.crudpai.ui.cliente.ClienteFragment"
+        android:label="@string/cliente_titulo"
+        tools:layout="@layout/fragment_cliente" />
 
 </navigation>
